--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Async JS</title>
-    <script src="fetch.js"></script>
+    <script src="async-await.js"></script>
   </head>
   <body>
     <h1>Asyncronous JavaScript</h1>
